...
    android:layout_alignParentStart="false"
    android:layout_alignParentTop="false"
    android:backgroundTint="#737373"
    tools:context=".ImageActivity">

    <Button
        android:id="@+id/confirm"
        android:layout_width="130dp"
        android:layout_height="49dp"
        android:text="Confirm"
        android:onClick="onConfirmClicked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pfp" />

...
